<resources>
    <string name="settings">Settings</string>
    <string name="goHome">Main Menu</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete my location from the Map</string>

    <string name="app_name">Parking for CPP</string>
    <string name="title">Parking For \nCal Poly Pomona</string>
    <string name="selection">\n\nMake a Selection</string>
    <string name="ride">I Need A Ride\n Back To My Car</string>
    <string name="park">I Need A \nParking Space</string>
    <string name="leave">I Am Leaving\nMy Parking Spot</string>

    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="form1Msg">Enter your Bronco ID and a description about yourself and your car</string>
    <string name="form1EditText">Description about yourself and your car i.e. brown hair and red t-shirt in black Toyota Camry.</string>
    <string name="form1Submit">Submit</string>

    <string name="form2Msg">Select a parking spot or student to pick up. Parking spots are in green. Students are in yellow.</string>

    <string name="arrive1msg">Press the button below once you arrive at the location</string>
    <string name="arrive1Button">Arrived!</string>

    <string name="thanks">Thank You!</string>

    <string name="leaving">Select the approximate location your car is parked on the map by long pressing on it. Zoom in for better accuracy.</string>
    <string name="thanks2Msg">You will receive a notification when your driver arrives at your parking location.</string>

    <string name="leaveMsg">Enter your Bronco ID and a description of your car and its location</string>
    <string name="leaveHint">Description of your car and its location. i.e. Blue Honda Civic, parking structure, section 3C</string>

    <string name="rideText">Select the approximate location you will be waiting on the map by long pressing on it. Zoom in for better accuracy.</string>
    <string name="broncoID">Enter your Bronco ID</string>
    <string name="rideText2">Enter your Bronco ID and a description of yourself</string>
    <string name="myLocation">Use My Location.</string>
    <string name="rideHint">Description of yourself. i.e. black hair, red shirt, blue pants.</string>
    <string name="thanks3Msg">You will receive a notification when your driver arrives at your location.</string>
</resources>
