<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/structure">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rideText2"
            android:textSize="33sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/gold"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_marginTop="20dp"
                android:text="@string/maleText"
                android:id="@+id/rideMaleCheck"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgreen"
                android:textStyle="bold"
                android:textSize="30sp"
                android:button="@drawable/custom_checkbox_design"/>
            <CheckBox
                android:layout_marginTop="20dp"
                android:text="@string/femaleText"
                android:id="@+id/rideFemaleCheck"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkgreen"
                android:textStyle="bold"
                android:textSize="30sp"
                android:button="@drawable/custom_checkbox_design"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/broncoEditText"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:hint="@string/broncoID"
            android:background="@drawable/abc_popup_background_mtrl_mult"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            />
        <EditText
            android:id="@+id/rideEditText"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/rideHint"
            android:background="@drawable/abc_popup_background_mtrl_mult"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="top"
            android:padding="20dp"
            />
        <Button
            android:id="@+id/rideButton2"
            android:text="@string/form1Submit"
            android:background="@color/darkgreen"
            android:textColor="@color/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            />
    </LinearLayout>

</LinearLayout>
