<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cla">
         <TextView
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title"
             android:padding="30dp"
             android:textSize="40sp"
             android:textColor="@color/darkgreen"
             android:textStyle="bold" />
         <TextView
             android:layout_gravity="center"
             android:paddingBottom="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:text="@string/selection"
             android:textColor="@color/gold"
             android:textStyle="bold"/>
         <LinearLayout
             android:layout_gravity="center"
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <Button
                 android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
                 android:padding="10dp"
                 android:background="@color/darkgreen"
                 android:id="@+id/parkButton"
                 android:text="@string/park"
                 android:textColor="@color/gold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <Button

                 android:padding="10dp"
                 android:background="@color/darkgreen"
                 android:id="@+id/rideButton"
                 android:text="@string/ride"
                 android:textColor="@color/gold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
</LinearLayout>